BUGFIX: Mobile share button and behavior - Changed icon to one that's supported by our fonts - Made sure share API will only be used on mobile, as Safari's desktop one sucks

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -252,6 +252,7 @@ body {
 	}
 }
 
+.share-mobile-btn,
 .share-btn,
 .whatsapp-btn,
 .telegram-btn {
@@ -267,12 +268,6 @@ body {
 }
 .telegram-btn {
 	color: #0088cc;
-}
-
-details[open] .share-btn,
-details[open] .whatsapp-btn,
-details[open] .telegram-btn {
-	display: inline-block;
 }
 
 .copy-icon {
